--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^3.2.1",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "sass": "^1.35.1",
-    "tabletop": "^1.6.3"
+    "sass": "^1.35.1"
   },
   "scripts": {
     "start": "react-scripts start",
